Resolve Icon element cannot change icon background
Fixes https://github.com/zionbuilder/zionbuilder/issues/385

--- a/packages/modalJS/static/main.html
+++ b/packages/modalJS/static/main.html
@@ -60,16 +60,16 @@
 				// 		delay: 500
 				// 	}
 				// },
-				// {
-				// 	type: 'pageScroll',
-				// 	options: {
-				// 		scrollAmmount: 80,
-				// 		direction: 'down'
-				// 	}
-				// },
 				{
-					type: 'exitIntent'
-				}
+					type: 'pageScroll',
+					options: {
+						scrollAmmount: 99,
+						direction: 'down'
+					}
+				},
+				// {
+				// 	type: 'exitIntent'
+				// }
 			],
 			behaviour: {
 				close_on_backdrop: true
